<resources>
    <string name="app_name">Android Assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_network_connection">No network connection</string>
    <string name="no_network_connection_description">Please check your network connection and try again.</string>
    <string name="network_settings">Network settings</string>
    <string name="refresh">Refresh</string>
    <string name="error_description">Please refresh this page and try again</string>
    <string name="oops_something_went_wrong">Oops! Something went wrong.</string>
    <string name="getting_apods">getting APODs , please wait …</string>
    <string name="getting_apods_please_wait">getting APODs , please wait …</string>
    <string name="our_universe">Our universe</string>
    <string name="latest">Latest</string>
    <string name="date">01/01/2022</string>
    <string name="reorder_list">Reorder list</string>
    <string name="reorder_by_title">Reorder by title</string>
    <string name="reorder_by_date">Reorder by date</string>
    <string name="reset">Reset</string>
    <string name="back_button">Back Button</string>
    <string name="favourite">Favourite</string>
    <string name="apod_explanation">There, just right of center, what is that? The surface of Mars keeps revealing new surprises with the recent discovery of finger-like rock spires. The small nearly-vertical rock outcrops were imaged last month by the robotic Curiosity rover on Mars. Although similar in size and shape to small snakes, the leading explanation for their origin is as conglomerations of small minerals left by water flowing through rock crevices. After these relatively dense minerals filled the crevices, they were left behind when the surrounding rock eroded away. Famous rock outcrops on Earth with a similar origin are called hoodoos. NASA\'s Curiosity Rover continues to search for new signs of ancient water in Gale Crater on Mars, while also providing a geologic background important for future human exploration. Explore Your Universe: Random APOD Generator</string>
    <string name="apply">Apply</string>
</resources>
