<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/on_background"
        android:layout_width="wrap_content"
        android:layout_height="330dp"
        android:layout_margin="15dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/reorder_list"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.060"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radio_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/reorder_by_title"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

        <RadioButton
            android:id="@+id/radio_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:layout_marginHorizontal="20dp"
            android:textSize="16sp"
            android:text="@string/reorder_by_date"
            app:layout_constraintEnd_toEndOf="@+id/radio_title"
            app:layout_constraintStart_toStartOf="@+id/radio_title"
            app:layout_constraintTop_toBottomOf="@+id/radio_title" />


        <Button
            android:id="@+id/button_apply"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="34dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/network_btn"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/apply"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_date" />


        <Button
            android:id="@+id/button_reset"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_apply" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>