<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_pageBody"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.apods.ApodsDetailFragment">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <ImageView
                android:id="@+id/imageView_Background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="22dp"
                    android:contentDescription="@string/back_button"
                    android:src="@drawable/ic_arrow_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_ourUniverse"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="start"
                    android:text="@string/our_universe"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/back"
                    app:layout_constraintTop_toTopOf="@+id/back" />


                <TextView
                    android:id="@+id/textView_apodTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="start"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/back"
                    app:layout_constraintTop_toBottomOf="@+id/textView_ourUniverse"
                    tools:text="The Milky way" />

                <TextView
                    android:id="@+id/textView_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="start"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/textView_apodTitle"
                    app:layout_constraintTop_toBottomOf="@+id/textView_apodTitle"
                    tools:text="@string/date" />

                <ImageButton
                    android:id="@+id/imageView_love"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="30dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/favourite"
                    android:src="@drawable/ic_favorite_border"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.9"
                    app:layout_constraintStart_toEndOf="@+id/textView_date"
                    app:layout_constraintTop_toBottomOf="@+id/textView_apodTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView_explanation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <TextView
                android:id="@+id/textView_explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="start"
                android:lineSpacingExtra="6dp"
                android:text="@string/apod_explanation"
                android:textSize="18sp" />

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>