<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ListScreenFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/our_universe"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/favourite"
            android:textAlignment="center"
            android:visibility="gone"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_favouriteList"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:visibility="gone"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_favourite"
            tools:itemCount="8"
            tools:listitem="@layout/favourite_item" />

        <TextView
            android:id="@+id/textView_Latest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="15dp"
            android:text="@string/latest"
            android:textAlignment="center"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView_favouriteList" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_apodsList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Latest"
            tools:listitem="@layout/apod_item"
            tools:itemCount="9"/>

        <Button
            android:id="@+id/reorder_list"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/network_btn"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/reorder_list"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:icon="@drawable/ic_reorder"
            app:iconGravity="textStart"
            app:iconTint="@android:color/white"
            android:paddingTop="9dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.974"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/recyclerView_apodsList"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
